Java Fx Cross Platform support (#6243)
* Basic cross-platform build working with runtime.

* Updated lanuch4j to work with runtime image

* Added download for javafx mods and local sdk
removed duplicate if in release and updates arch

* Fixed tests to work with javafx modules

* Fixed tests

* Updated distributions and pcgenRelease

* Updates JRE version to java 13 to match travis. Fixed issues with exe and jar not being copied properly. Reduced exe size by removing bundled jar.
The java used for building must match the target java version now. I've chosen java 13 but this can be easily changed.

* Update NSIS to use new images. Libs folder is now lib from distrubtion.
Missing "common-io" however doesn't appear to be used in code.

* Update github workflow to use JDK 13 rather than 11

* Added RunJar task as I'm unable to modifiy args to run task.
Attempted to update mac bundeler

* MacOS installer with travis build. Jpackage only creates installer for current OS.

* Added macos conditionals

* Fixed secure

* Added missing semicolns if

* Use homebrew addon

* Update macos jdk version

* Removed macappbundle

* Updated travis deploy indent

* Added jpackage metadata and fixed release copy issues

* Fixed jpackage options

* Only copies files from jpackage. Fixes issue with checksum on dirs

* Add resource dir

* Move the nsis output exe into a separate folder.
In gradle multiple tasks shouldn't output to the same folder as this can cause issue with the upto date checker. In this case first time run of the build overwrote the installer which broke travis ci builds.

* Copy data and other files for jpackage installer. Seperated checksums for installers and jar from zip as they may be built on different platforms.

* Added mac-package-identifier

* Add mac-package-name and update identifyer

* Remove data copy to attempt to get bundle to build

* Add data copy to resources rather than MacOS

* Fixed mac inst