@@ -13,6 +13,7 @@
 
 // import Ant helper static values to differ system families
 import org.apache.tools.ant.filters.FixCrLfFilter
+import org.apache.tools.ant.taskdefs.condition.Os
 
 plugins {
     id 'eclipse'
@@ -28,7 +29,6 @@ plugins {
     id 'edu.sc.seis.launch4j' version '2.4.6'
     id 'com.github.ben-manes.versions' version '0.29.0'
     id "com.dorongold.task-tree" version '1.5'
-    id "edu.sc.seis.macAppBundle" version "2.3.0"
     id 'org.openjfx.javafxplugin' version '0.0.9'
     id 'org.beryx.runtime' version '1.11.2'
 }
@@ -36,6 +36,7 @@ plugins {
 javafx {
     version = "14.0.1"
     modules = [ 'javafx.controls', 'javafx.web', 'javafx.swing', 'javafx.fxml', 'javafx.graphics' ]
+    configuration = "compileOnly"
 }
 
 group = 'net.sourceforge.pcgen'
@@ -59,25 +60,6 @@ ext {
 //if other IDEs set different properties when trying to execute a given class
 //feel free to add them here.
 mainClassName = project.hasProperty('mainClass') ? mainClass : 'pcgen.system.Main';
-
-applicationDistribution.from('plugins') {
-    into "plugins"
-}
-applicationDistribution.from('docs') {
-    into "docs"
-}
-applicationDistribution.from('data') {
-    into "data"
-}
-applicationDistribution.from('outputsheets') {
-    into "outputsheets"
-}
-applicationDistribution.from('system') {
-    into "system"
-}
-applicationDistribution.from('preview') {
-    into "preview"
-}
 
 repositories {
     mavenCentral()
@@ -242,6 +224,7 @@ jar {
     }
 }
 
+
 runtime {
     options = ['--compress', '2']
     modules = [
@@ -260,8 +243,62 @@ runtime {
     'java.scripting',
     'jdk.jfr',
     'jdk.jsobject',
+    'javafx.controls',
+    'javafx.web',
+    'javafx.swing',
+    'javafx.fxml',
+    'javafx.graphics'
     ]
+
+    targetPlatform('linux-x64', "$projectDir/jre/linux/jre_x64")
+    targetPlatform('windows-x64', "$projectDir/jre/windows/jre_x64")
+    targetPlatform('windows-x32', "$projectDir/jre/windows/jre_x32")
+    targetPlatform('mac-x64', "$projectDir/jre/mac/jre_x64/Contents/Home")
+
+    jpackage{
+        installerOptions = ["--app-version", "${version.replaceAll('-SNAPSHOT', '')}","--license-file", "${projectDir}/code/LICENSE"]
+
+        if (Os.isFamily(Os.FAMILY_MAC))
+        {
+            targetPlatformName = 'mac-x64'
+            installerOptions += ["--mac-package-identifier", "PcGen", "--mac-package-name", "PcGen"]
+            resourceDir = file("${projectDir}/installers/mac-installer")
+        }
+        else {
+            targetPlatformName = 'linux-x64'
+            installerOptions += ['--linux-shortcut']
+        }
+
+        imageName = "PcGen"
+    }
 }
+
+tasks.jpackageImage.doLast {
+    copy {
+        includeEmptyDirs = false
+        from "${buildDir}/install/pcgen/"
+        exclude "**/*.exe"
+        exclude "**/*.bat"
+        exclude "pcgen"
+        exclude "**/lib/**"
+        if (Os.isFamily(Os.FAMILY_MAC)){
+            into "build/jpackage/PcGen.app/Contents/MacOS"
+        }
+        else {
+            into "build/jpackage/PcGen/bin"
+        }
+    }
+    if (Os.isFamily(Os.FAMILY_MAC)){
+        copy {
+            from "${projectDir}/installers/mac-installer"
+            include "MacDirLauncher"
+            fileMode 0755
+            into "${buildDir}/jpackage/PcGen.app/Contents/MacOS"
+        }
+        ant.replace(file: "${buildDir}/jpackage/PcGen.app/Contents/Info.plist", token: "<key>CFBundleExecutable</key>\n  <string>PcGen</string>", value: "<key>CFBundleExecutable</key>\n  <string>MacDirLauncher</string>")
+    }
+}
+
 
 task converterJar(type: Jar, dependsOn: jar) {
     manifest {
@@ -339,9 +376,196 @@ clean {
 //Ensures that clean is never run after build and when clean is called it is run before build so it doesn't delete the new build folder.
 build.mustRunAfter clean
 
+task downloadJRE {
+    def major = 14
+    def archs = ['x64','x32']
+    def osList = ['windows', 'mac','linux']
+    def extension = 'zip'
+    osList.each{
+        def os = "${it}"
+        if(os != "windows") {
+            extension = 'tar.gz'
+        }
+        archs.each {
+            def arch = "${it}"
+            if (arch == "x32" && os != "windows") return
+
+            def url = "https://api.adoptopenjdk.net/v3/binary/latest/${major}/ga/${os}/${arch}/jdk/hotspot/normal/adoptopenjdk"
+            def jreDir = new File("${projectDir}/jre/${os}/jre_${arch}")
+            if(!jreDir.exists()){
+                //Only download Windows libraries. Need to add more OS if we go multi OS at any time.
+                println("Downloading Java ${major} ${arch} for ${os} from ${url}")
+                download {
+                    src url
+                    dest new File("${projectDir}/jre/${os}/", "jre_${arch}.${extension}")
+                    overwrite false
+                }
+                //Now untar them
+                if(extension == "zip"){
+                    fileTree(dir: "${projectDir}/jre/${os}/").include("*.${extension}").each { simLib ->
+                        copy {
+                            println "Unzip $simLib.name"
+                            def zipFile = file("${projectDir}/jre/${os}/${simLib.name}")
+                            def outputDir = "${projectDir}/jre/${os}/jre_${arch}/"
+
+                            from zipTree(zipFile)
+                            into outputDir
+                            eachFile { fcd ->
+                                def relPath = fcd.relativePath
+                                if(relPath.lastName.startsWith("jdk-")  && fcd.isDirectory()) {
+                                    fcd.exclude()
+                                } else {
+                                    def segments = relPath.segments
+                                    fcd.relativePath = new RelativePath( !fcd.isDirectory() ,(segments[1..-1]) as String[]  )
+                                }
+                            }
+                        }
+                        new File("${projectDir}/jre/${os}/${simLib.name}").delete()
+                    }
+                } else {
+                    fileTree(dir: "${projectDir}/jre/${os}/").include("*.${extension}").each { simLib ->
+                        copy {
+                            println "Unzip $simLib.name"
+                            def name = simLib.name - '.$extension'
+                            def zipFile = file("${projectDir}/jre/${os}/${simLib.name}")
+                            def outputDir = "${projectDir}/jre/${os}/jre_${arch}/"
+
+                            from tarTree(zipFile)
+                            into outputDir
+                            eachFile { fcd ->
+                                def relPath = fcd.relativePath
+                                if(relPath.lastName.startsWith("jdk-")  && fcd.isDirectory()) {
+                                    fcd.exclude()
+                                } else {
+                                    def segments = relPath.segments
+                                    fcd.relativePath = new RelativePath( !fcd.isDirectory() ,(segments[1..-1]) as String[]  )
+                                }
+                            }
+                        }
+                        new File("${projectDir}/jre/${os}/${simLib.name}").delete()
+                    }
+                }
+                file("${projectDir}/jre/${os}/jre_${arch}").list().each { f->
+                    if(f.startsWith("jdk")) {
+                        file("${projectDir}/jre/${os}/jre_${arch}/"+f).deleteDir()
+                    }
+                }
+
+            }
+        }
+    }
+}
+
+
+task downloadJavaFXModules(dependsOn: downloadJRE) {
+    def major = "14-0-1"
+    def archs = ['x64', 'x86']
+    def osList = ["windows", "mac", "linux"]
+
+    //Downloads javafx .mods for custom runtime image. All platforms downloaded
+    osList.each {
+        def os = "${it}"
+        archs.each {
+            def arch = "$it"
+
+            def archAppend = ""
+            if ((arch == "x86")) {
+                if (os == "windows") {
+                    archAppend = "-x86"
+                } else {
+                    return
+                }
+            }
+
+            def url = "https://gluonhq.com/download/javafx-${major}-jmods-${os}${archAppend}/"
+            def jmodsDir = new File("${projectDir}/jre/${os}/jre_${arch}/jmods")
+            def jmodsZip = new File("${projectDir}/jre/${os}/jmods${arch}.zip")
+            if (!jmodsZip.exists()) {
+                println("Downloading Javafx mods ${major} ${arch} for ${os} from ${url}")
+                download {
+                    src url
+                    dest new File("${projectDir}/jre/${os}/", "jmods${arch}.zip")
+                    overwrite false
+                }
+                //fileTree(dir: "${projectDir}/jre/${os}/").include("*.zip").each { simLib ->
+                copy {
+                    println "Unzip jmods${arch}.zip"
+                    def zipFile = file("${projectDir}/jre/${os}/jmods${arch}.zip")
+                    def outputDir = "${projectDir}/jre/${os}/jre_${arch}/jmods"
+                    if (os=="mac")
+                    {
+                        outputDir = "${projectDir}/jre/${os}/jre_${arch}/Contents/Home/jmods"
+
+                    }
+                    else if(os=="windows" && arch=="x86")
+                    {
+                        outputDir = "${projectDir}/jre/${os}/jre_x32/jmods"
+                    }
+                    from zipTree(zipFile)
+                    into outputDir
+                    eachFile { fcd ->
+                        def relPath = fcd.relativePath
+
+                        def segments = relPath.segments
+                        fcd.relativePath = new RelativePath(!fcd.isDirectory(), (segments[1..-1]) as String[])
+
+                    }
+                }
+                //new File("${projectDir}/jre/${os}/${simLib.name}").delete()
+                //}
+            }
+        }
+    }
+
+    //Downloads javafx sdk for local platform. Used for running tests.
+    def sdkDir = new File("${projectDir}/mods")
+    if (!sdkDir.exists()) {
+        def os=""
+        if (Os.isFamily(Os.FAMILY_WINDOWS)) {
+            os = "windows"
+
+        } else if (Os.isFamily(Os.FAMILY_MAC)) {
+            os = "mac"
+        } else {
+            os = "linux"
+        }
+
+        def url = "https://gluonhq.com/download/javafx-${major}-sdk-${os}/"
+
+        println("Downloading JavaFX sdk for ${os} from ${url}")
+
+        download {
+            src url
+            dest new File("${projectDir}/mods", "javaFXSdk-${os}.zip")
+            overwrite false
+        }
+
+        copy {
+            println "Unzip javaFXSdk-${os}.zip"
+            def zipFile = file("${projectDir}/mods/javaFXSdk-${os}.zip")
+            def outputDir = "${projectDir}/mods"
+
+            from zipTree(zipFile)
+            into outputDir
+            eachFile { fcd ->
+                def relPath = fcd.relativePath
+
+                def segments = relPath.segments
+                fcd.relativePath = new RelativePath(!fcd.isDirectory(), (segments[1..-1]) as String[])
+
+            }
+        }
+    }
+}
+
+compileJava.dependsOn(downloadJavaFXModules)
+tasks.runtime.dependsOn(downloadJavaFXModules)
+
 test {
     exclude 'pcgen/testsupport/**'
+
     useJUnitPlatform()
+
 }
 
 task itest(type: Test, dependsOn: [jar]) {
@@ -434,7 +658,26 @@ allprojects {
                 '-Dprism.order=sw',
                 '-Dprism.verbose=true',
                 '-Djavafx.macosx.embedded=true',
+
+                "--module-path", "${projectDir}/mods/lib/",
+                "--add-modules", "javafx.controls,javafx.web,javafx.swing,javafx.fxml",
+
+                //Needed to fix issue with testfx test crashing due to issue with modularity of whole program. Slightly related issue. https://github.com/TestFX/TestFX/issues/638
+                '--add-exports','javafx.graphics/com.sun.javafx.application=ALL-UNNAMED',
+                '--add-opens','javafx.graphics/com.sun.glass.ui=ALL-UNNAMED',
+
         ]
+    }
+    tasks.withType(JavaCompile) {
+        doFirst {
+
+            if (name.toLowerCase().contains("test")) {
+                options.compilerArgs << "--module-path" << "${projectDir}/mods/lib/"
+                options.compilerArgs << "--add-modules" << "javafx.controls,javafx.web,javafx.swing,javafx.fxml"
+            }
+            println "Args for for $name are $options.allCompilerArgs"
+
+        }
     }
 }
 
@@ -481,9 +724,6 @@ wrapper {
     distributionType = Wrapper.DistributionType.ALL
 }
 
-run {
-    enableAssertions = true
-}
 
 apply from: 'code/gradle/autobuild.gradle'
 apply from: 'code/gradle/distribution.gradle'
